--- a/styles/architects.css
+++ b/styles/architects.css
@@ -7,4 +7,128 @@
   font-style: normal;
 }
 
+/* shared styles */
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main>section{
+    margin-top: 130px;
+}
+.text-primary{
+    color:rgba(255, 144, 14, 1)
+}
+.display-flex{
+    display: flex;
+}
+.section-title{
+    font-weight: 700;
+    font-size: 2.8rem;
+}
 
+/* Header Background color */
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+/*Dark 02*/
+.text-gray{
+    color:rgba(66, 66, 66, 1);
+}
+/*Dark 03*/
+.text-light-gray{
+    color:rgba(114, 114, 114, 1);
+}
+
+
+
+
+/* Header */
+/* navbar related styles */
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+}
+
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0px auto;
+}
+
+.brand{
+    font-weight:700;
+    font-size: 3rem;
+}
+/* Banner related styles */
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+
+.btn-primary{
+    background-color: rgba(255, 144, 14, 1);
+    color: white;
+    padding: 20px 25px;
+    border-radius: 8px;
+    border: none;
+    font-weight: 600;
+    font-size: 1.25rem;
+}
+
+.banner-image{
+    width: 100%;
+}
+
+/* team and feature related styles */
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+.out-features{
+    margin-left: 70px;
+    max-width: 530px;
+}
+
+#quick-list{
+    font-weight: 500;
+}
+/* Responsive Media Query */
+@media screen and (max-width: 576px){
+    .navbar, .nav-links, .teams{
+        flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    /* .our-features{
+        margin-left: 20px;
+    } */
+}
+
+@media screen and (min-width: 576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .out-features{
+        margin: 50px auto;
+    }
+}
