--- a/styles/architects.css
+++ b/styles/architects.css
@@ -157,9 +157,47 @@ main>section{
 .sponsor-companies img{
     filter: grayscale(100%);
 }
+/* feature section related styles */
+.features{
+    gap: 140px;
+}
+#feature-section-title{
+    border-left: 5px solid rgba(255, 144, 14, 1);
+    padding-left: 20px;
+}
+
+.feature-card .feature-title{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.feature-card{
+    padding: 30px;
+    border-radius: 8px;
+    margin-top: 20px;
+    box-shadow: 0px 4px 30px 4px rgba(0, 0, 0, 0.25);
+}
+.feature-architect{
+    width: 100%;
+}
+
+#experience-badge{
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding: 45 42;
+    margin-left: -90px;
+    margin-top: -120px;
+}
+#experience-year{
+    font-size:4rem;
+    font-weight:700;
+}
+
+
 /* Responsive Media Query */
 @media screen and (max-width: 576px){
-    .navbar, .nav-links, .teams{
+    .navbar, .nav-links, .teams, .features{
         flex-direction: column;
     }
     .team-img-container, .facts-container, .sponsor-companies{
@@ -171,16 +209,30 @@ main>section{
     .sponsor-companies{
         gap:50px;
     }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
     /* .our-features{
         margin-left: 20px;
     } */
 }
 
+
 @media screen and (min-width: 576px) and (max-width:992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }
     .out-features{
         margin: 50px auto;
+    }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+    .sponsor-companies, .facts-container{
+        grid-template-columns: repeat(2,1fr);
+        gap: 50px;
+        justify-items: center;
     }
 }
